# health-reminder

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: CountdownRing.tsx  ExerciseLibrary.tsx  SettingsPanel.tsx
src/data/: exercises.ts
src/hooks/: useCountdown.ts  useSettings.ts
src/types/: index.ts
