[package]
name = "health-reminder"
version = "0.1.0"
description = "A warm, human-centered health reminder for desk workers"
authors = ["xiaobo"]
edition = "2021"

[lib]
name = "health_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                    = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-opener      = "2"
serde                    = { version = "1", features = ["derive"] }
serde_json               = "1"
chrono                   = "0.4"
tokio                    = { version = "1", features = ["time"] }
